@@ -1,3 +1,11 @@
+2002-01-19  Kevin Vandersloot <kfv101@psu.edu>
+
+	* procman.c: 
+	* defaulttable.h:
+	use gnome-monitor for the window icon
+
+	* Makefile.am: remove procman.png
+
 2002-01-15  Kevin Vandersloot <kfv101@psu.edu>
 
 	* Makefile.am: call gconftool-2 and remove unneded tab spaces
