@@ -1,3 +1,7 @@
+2002-01-19  Kevin Vandersloot <kfv101@psu.edu>
+
+	* procman.spec: don't intall procman.png
+
 2002-01-19  Seth Nickell  <snickell@stanford.edu>
 
 	* procman.desktop.in:
